<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMI Calculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weightInKg">Weight(in Kg)</string>
    <string name="HeightInCm">Height (in Cm)</string>
    <string name="HeightInM">Height (in meters)</string>
    <string name="bmiCalcBtn">BMI</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="english">English</string>
    <string name="metric">Metric</string>
    <string name="bmi">Your BMI is:</string>

</resources>
